--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Interactive Grid</h1>
     <div id="grid" class="grid"></div> <!-- The grid where the squares will be placed -->
+    <script src="/socket.io/socket.io.js"></script> <!-- Socket.io client-side script -->
     <script src="app.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
